Roteiros 7 e 8