@@ -7,6 +7,7 @@ import com.delivery_api.Projeto.Delivery.API.exception.BusinessException;
 import com.delivery_api.Projeto.Delivery.API.exception.EntityNotFoundException;
 import com.delivery_api.Projeto.Delivery.API.repository.ClienteRepository;
 import com.delivery_api.Projeto.Delivery.API.service.ClienteService;
+
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -14,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -26,8 +26,12 @@ public class ClienteServiceImpl implements ClienteService {
     @Autowired
     private ModelMapper modelMapper;
 
+    // ============================================================
+    // CADASTRAR
+    // ============================================================
     @Override
     public ClienteResponseDTO cadastrar(ClienteRequestDTO requestDTO) {
+
         if (clienteRepository.existsByEmail(requestDTO.getEmail())) {
             throw new BusinessException("Email já cadastrado: " + requestDTO.getEmail());
         }
@@ -36,69 +40,96 @@ public class ClienteServiceImpl implements ClienteService {
         cliente.setAtivo(true);
         cliente.setDataCadastro(LocalDateTime.now());
 
-        Cliente clienteSalvo = clienteRepository.save(cliente);
-        return modelMapper.map(clienteSalvo, ClienteResponseDTO.class);
+        Cliente salvo = clienteRepository.save(cliente);
+        return modelMapper.map(salvo, ClienteResponseDTO.class);
     }
 
+    // ============================================================
+    // BUSCAR POR ID
+    // ============================================================
     @Override
     @Transactional(readOnly = true)
     public ClienteResponseDTO buscarPorId(Long id) {
         Cliente cliente = clienteRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Cliente", id));
+
         return modelMapper.map(cliente, ClienteResponseDTO.class);
     }
 
+    // ============================================================
+    // BUSCAR POR EMAIL
+    // ============================================================
     @Override
     @Transactional(readOnly = true)
     public ClienteResponseDTO buscarPorEmail(String email) {
         Cliente cliente = clienteRepository.findByEmail(email)
                 .orElseThrow(() -> new EntityNotFoundException("Cliente não encontrado com email: " + email));
+
         return modelMapper.map(cliente, ClienteResponseDTO.class);
     }
 
+    // ============================================================
+    // LISTAR ATIVOS
+    // ============================================================
     @Override
     @Transactional(readOnly = true)
     public List<ClienteResponseDTO> listarAtivos() {
         return clienteRepository.findByAtivoTrue()
                 .stream()
-                .map(cliente -> modelMapper.map(cliente, ClienteResponseDTO.class))
-                .collect(Collectors.toList());
+                .map(c -> modelMapper.map(c, ClienteResponseDTO.class))
+                .toList();
     }
 
+    // ============================================================
+    // ATUALIZAR
+    // ============================================================
     @Override
     public ClienteResponseDTO atualizar(Long id, ClienteRequestDTO requestDTO) {
+
         Cliente cliente = clienteRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Cliente", id));
 
-        if (!cliente.getEmail().equals(requestDTO.getEmail()) &&
-                clienteRepository.existsByEmail(requestDTO.getEmail())) {
+        boolean emailMudou = !cliente.getEmail().equals(requestDTO.getEmail());
+
+        if (emailMudou && clienteRepository.existsByEmail(requestDTO.getEmail())) {
             throw new BusinessException("Email já cadastrado: " + requestDTO.getEmail());
         }
 
-        modelMapper.map(requestDTO, cliente); // Atualiza os campos da entidade
-        Cliente clienteAtualizado = clienteRepository.save(cliente);
-        return modelMapper.map(clienteAtualizado, ClienteResponseDTO.class);
+        // Atualização controlada (sem sobrescrever campos críticos)
+        cliente.setNome(requestDTO.getNome());
+        cliente.setEmail(requestDTO.getEmail());
+        cliente.setTelefone(requestDTO.getTelefone());
+        cliente.setEndereco(requestDTO.getEndereco());
+        cliente.setCep(requestDTO.getCep());
+
+        Cliente atualizado = clienteRepository.save(cliente);
+        return modelMapper.map(atualizado, ClienteResponseDTO.class);
     }
 
+    // ============================================================
+    // ATIVAR / DESATIVAR
+    // ============================================================
     @Override
     public ClienteResponseDTO ativarDesativar(Long id) {
+
         Cliente cliente = clienteRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Cliente", id));
 
-        // Alternar status (ativo ↔ inativo)
         cliente.setAtivo(!cliente.getAtivo());
 
-        Cliente clienteAtualizado = clienteRepository.save(cliente);
-
-        return modelMapper.map(clienteAtualizado, ClienteResponseDTO.class);
+        Cliente atualizado = clienteRepository.save(cliente);
+        return modelMapper.map(atualizado, ClienteResponseDTO.class);
     }
 
+    // ============================================================
+    // BUSCAR POR NOME
+    // ============================================================
     @Override
     @Transactional(readOnly = true)
     public List<ClienteResponseDTO> buscarPorNome(String nome) {
         return clienteRepository.findByNomeContainingIgnoreCase(nome)
                 .stream()
-                .map(cliente -> modelMapper.map(cliente, ClienteResponseDTO.class))
-                .collect(Collectors.toList());
+                .map(c -> modelMapper.map(c, ClienteResponseDTO.class))
+                .toList();
     }
 }
